--- a/doc/latex/pgfplots/pgfmanual-en-macros.tex
+++ b/doc/latex/pgfplots/pgfmanual-en-macros.tex
@@ -23,16 +23,21 @@
 \definecolor{codebackground}{rgb}{0.8,0.8,1}
 
 \newenvironment{pgfmanualentry}{%
+\BlockClass{manualentry}%
   \pgfmanualresetlabel
   \list{}{\leftmargin=2em\itemindent-\leftmargin\def\makelabel##1{\hss##1}}%
-}{\endlist}
+}{\endlist%
+\endBlockClass}
 \newcounter{pgfmanualentry}
 \newcommand\pgfmanualentryheadline[1]{%
+\begin{BlockClass}{entryheadline}
   \itemsep=0pt\parskip=0pt\relax
   {\raggedright\item\refstepcounter{pgfmanualentry}\pgfmanualstorelabel
    \strut{#1}\par}%
-  \topsep=0pt}
+  \topsep=0pt%
+\end{BlockClass}}
 \newcommand\pgfmanualbody{\parskip3pt}
+
 
 \makeatletter
 \newif\if@pgfmanualfirstlabel
@@ -44,7 +49,7 @@
 \newcommand\pgfmanualstorelabel{%
   \if@pgfmanualfirstlabel
     \begingroup
-    \label@hook
+    % \label@hook
     \xdef\pgfmanual@labelinfo
       {{\@currentlabel}{\thepage}{\@currentlabelname}{\@currentHref}{}}%
     \endgroup
@@ -612,11 +617,11 @@
 
 
 
-\newcommand\opt[1]{{\color{black!50!green}#1}}
+\newcommand\opt[1]{\textcolor{black!50!green}{#1}}
 \newcommand\ooarg[1]{{\ttfamily[}\meta{#1}{\ttfamily]}}
 
-\def\opt{\afterassignment\pgfmanualopt\let\next=}
-\def\pgfmanualopt{\ifx\next\bgroup\bgroup\color{black!50!green}\else{\color{black!50!green}\next}\fi}
+% \def\opt{\afterassignment\pgfmanualopt\let\next=}
+% \def\pgfmanualopt{\ifx\next\bgroup\bgroup\color{black!50!green}\else{\color{black!50!green}\next}\fi}
 
 
 
@@ -656,8 +661,9 @@
 
 \def\printanat{\char`\@}
 
-\def\declare{\afterassignment\pgfmanualdeclare\let\next=}
-\def\pgfmanualdeclare{\ifx\next\bgroup\bgroup\color{red!75!black}\else{\color{red!75!black}\next}\fi}
+\newcommand\declare[1]{\textcolor{red!75!black}{#1}}
+% \def\declare{\afterassignment\pgfmanualdeclare\let\next=}
+% \def\pgfmanualdeclare{\ifx\next\bgroup\bgroup\color{red!75!black}\else{\color{red!75!black}\next}\fi}
 
 
 \let\textoken=\command
@@ -959,53 +965,107 @@
   \find@example}
 \def\endofcodeexample#1{%
   \endgroup%
+  \begin{BlockClass}{example}%
   \ifcode@execute%
-    \setbox\codeexamplebox=\hbox{%
+  \begin{BlockClass}{example-image}%
       {%
         {%
           \returntospace%
           \commenthandler%
           \xdef\code@temp{#1}% removes returns and comments
         }%
-%\message{Nach returntospace: \meaning\code@temp^^J^^J^^J}%
         \expandafter\pgfmanual@codeexample@generate@graphic\expandafter{\code@temp}%
       }%
-    }%
-    \ifdim\wd\codeexamplebox>\codeexamplewidth%
-      \def\code@start{\par}%
-      \def\code@flushstart{}\def\code@flushend{}%
-      \def\code@mid{\parskip2pt\par\noindent}%
-      \def\code@width{\linewidth-6pt}%
-      \def\code@end{}%
-    \else%
-      \def\code@start{%
-        \linewidth=\textwidth%
-        \parshape \@ne 0pt \linewidth
-        \leavevmode%
-        \hbox\bgroup}%
-      \def\code@flushstart{\hfill}%
-      \def\code@flushend{\hbox{}}%
-      \def\code@mid{\hskip6pt}%
-      \def\code@width{\linewidth-12pt-\codeexamplewidth}%
-      \def\code@end{\egroup}%
-    \fi%
-    \code@start%
-    \noindent%
-    \begin{minipage}[t]{\codeexamplewidth}\raggedright
-      \hrule width0pt%
-      \footnotesize\vskip-1em%
-      \code@flushstart\box\codeexamplebox\code@flushend%
-      \vskip-1ex
-      \leavevmode%
-    \end{minipage}%
+    \end{BlockClass}% % end example-image%
+%     \ifdim\wd\codeexamplebox>\codeexamplewidth%
+%       \def\code@start{\par}%
+%       \def\code@flushstart{}\def\code@flushend{}%
+%       \def\code@mid{\parskip2pt\par\noindent}%
+%       \def\code@width{\linewidth-6pt}%
+%       \def\code@end{}%
+%     \else%
+%       \def\code@start{%
+%         \linewidth=\textwidth%
+%         \parshape \@ne 0pt \linewidth
+%         \leavevmode%
+%         \hbox\bgroup}%
+%       \def\code@flushstart{\hfill}%
+%       \def\code@flushend{\hbox{}}%
+%       \def\code@mid{\hskip6pt}%
+%       \def\code@width{\linewidth-12pt-\codeexamplewidth}%
+%       \def\code@end{\egroup}%
+%     \fi%
+%     \code@start%
+%     \noindent%
+%     \begin{minipage}[t]{\codeexamplewidth}\raggedright
+%       \hrule width0pt%
+%       \footnotesize\vskip-1em%
+%       \code@flushstart\box\codeexamplebox\code@flushend%
+%       \vskip-1ex
+%       \leavevmode%
+%     \end{minipage}%
   \else%
     \def\code@mid{\par}
     \def\code@width{\linewidth-6pt}
     \def\code@end{}
   \fi%
-  \code@mid%
-  \colorbox{codebackground}{%
-    \begin{minipage}[t]{\code@width}%
+%   \code@mid%
+%   \colorbox{codebackground}{%
+%     \begin{minipage}[t]{\code@width}%
+%       {%
+%         \let\do\@makeother
+%         \dospecials
+%         \frenchspacing\@vobeyspaces
+%         \normalfont\ttfamily\footnotesize
+%         \typesetcomment%
+%         \codeexample@tabinit@replacementchars
+%         \@tempswafalse
+%         \def\par{%
+%           \if@tempswa
+%           \leavevmode \null \@@par\penalty\interlinepenalty
+%           \else
+%           \@tempswatrue
+%           \ifhmode\@@par\penalty\interlinepenalty\fi
+%           \fi}%
+%         \obeylines
+%         \everypar \expandafter{\the\everypar \unpenalty}%
+%         \pgfmanual@@typeset@listing{#1}%
+%     }
+%     \end{minipage}}%
+%   \code@end%
+%   \par%
+%   \medskip
+  % \begin{BlockClass}{example}%
+    % \ifcode@execute%
+    %   \begin{BlockClass}{example-image}%
+    %   \ifx\code@render\pgfutil@empty%
+    %     {% 
+    %       {%
+    %         \returntospace%
+    %         \commenthandler%
+    %         \xdef\code@temp{#1}% removes returns and comments
+    %       }%
+    %       \edef\pgfmanualmcatcode{\the\catcode`\^^M}%
+    %       \catcode`\^^M=9\relax%
+    %       \code@pre\expandafter\scantokens\expandafter{\code@temp\ignorespaces}\code@post\ignorespaces
+    %       % \expandafter\scantokens\expandafter{\code@temp}%
+    %       \catcode`\^^M=\pgfmanualmcatcode%
+    %     }%
+    %   \fi
+    %   \end{BlockClass}% % end example-image
+    % \fi%
+  %   \def\code@width{\linewidth-6pt}
+  %   \pgfkeysvalueof{/codeexample/prettyprint/base color}%
+    % \begin{BlockClass}{example-code}%
+    %   \pgfmanual@@typeset@listing{#1}%
+    % \end{BlockClass}% % end example-code
+  %   \par%
+  %   \medskip
+  % \end{BlockClass}% % end example
+  % \def\code@mid{\par}
+  % \def\code@width{\linewidth-6pt}
+  % \def\code@end{}
+    \begin{BlockClass}{example-code}%
       {%
         \let\do\@makeother
         \dospecials
@@ -1025,10 +1085,10 @@
         \everypar \expandafter{\the\everypar \unpenalty}%
         \pgfmanual@@typeset@listing{#1}%
     }
-    \end{minipage}}%
-  \code@end%
+    \end{BlockClass}% % end example-code
   \par%
   \medskip
+  \end{BlockClass}% % end example
   \end{codeexample}
 }
 
@@ -1039,9 +1099,12 @@
 }%
 \long\def\pgfmanual@codeexample@generate@graphic@#1{%
     \color{black}\ignorespaces%
+    % \edef\pgfmanualmcatcode{\the\catcode`\^^M}%
+    % \catcode`\^^M=9\relax%
     \code@pre%
     \pgfmanual@scantokens{#1}\ignorespaces%
     \code@post\ignorespaces%
+    % \catcode`\^^M=\pgfmanualmcatcode%
 }%
 
 \ifluatex
@@ -1080,3 +1143,32 @@
 %%% mode: latex
 %%% TeX-master: "beameruserguide"
 %%% End:
+
+
+\makeatletter
+% custom comment command for styling
+\newenvironment{codecomment}{%
+  \LWR@subhtmlelementclass{span}{example-code-comment}%
+  \begin{LWR@nestspan}%
+}{%
+  \LWR@htmltagc{/span}%
+  \end{LWR@nestspan}%
+}
+
+\begin{warpHTML}
+% better label names (remove LWR-ht- prefix)
+\RenewDocumentCommand{\LWR@hypertargetb}{m +m}{%
+  \label{#1}%
+  #2%
+  \endgroup%
+}
+\RenewDocumentCommand{\LWR@hyperlinkb}{m}{%
+\ifbool{LWR@insidemathcomment}%
+{\endgroup}%
+{\LWR@hyperrefcb[#1]}%
+}
+\end{warpHTML}
+\makeatother
+
+% %%%%% MODIFY HTML FILE NAME SYSTEM
+\input{pgfmanual-filename-maker.tex}
